02-deploy-application/api-node/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-node
  namespace: tracking-system
spec:
  selector:
    app: api-node
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
